Score share Twtr fix + spacing + difficulty tweak

--- a/style/main.scss
+++ b/style/main.scss
@@ -1,7 +1,7 @@
 @import "helpers";
 @import "fonts/clear-sans.css";
 
-$field-width: 1000px;
+$field-width: 1040px;
 $box-width: 250px;
 $grid-spacing: 15px;
 $grid-row-cells: 2;
@@ -184,7 +184,7 @@ hr {
     background: $game-container-background;
     border-radius: $tile-border-radius * 2;
     width: $field-width;
-    height: $field-width / 2;
+    height: 500px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -284,8 +284,11 @@ hr {
 
     background: rgba($tile-color, .35);
 
-    &:nth-child(2), &:nth-child(4), &:nth-child(6) {
+    &:nth-child(2), &:nth-child(6) {
       margin-right: 2 * $grid-spacing;
+    }
+    &:nth-child(4) {
+      margin-right: 4 * $grid-spacing;
     }
     &:last-child {
       margin-right: 0;
@@ -311,7 +314,7 @@ hr {
           @for $w from 1 through $grid-row-cells {
             @for $v from 1 through $grid-row-cells {
               &.tile-position-#{$x}-#{$y}-#{$z}-#{$w}-#{$v} {
-                $xPos: floor(($tile-size + $grid-spacing) * ($x - 1) + $box-width * ($z - 1) + 500 * ($v - 1));
+                $xPos: floor(($tile-size + $grid-spacing) * ($x - 1) + $box-width * ($z - 1) + 530 * ($v - 1));
                 $yPos: floor(($tile-size + $grid-spacing) * ($y - 1) + $box-width * ($w - 1));
                 @include transform(translate($xPos, $yPos));
               }
